Refactored diary delete exercise or product item
